# hydra-lightning-router

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml  weeder.toml
.github/workflows/: ci-nix.yaml
hydra-lightning-router/: ChangeLog.md  README.md  hydra-lightning-router.cabal  plutus.json
hydra-lightning-router/app/: Main.hs
hydra-lightning-router/src/Hydra/HTLC/: Address.hs  BuildTx.hs  Conversions.hs  Data.hs  Embed.hs  Tx.hs  Upstream.hs
hydra-lightning-router/src/Hydra/Lightning/: Scenario.hs
hydra-lightning-router/test/: Main.hs
hydra-lightning-router/test-e2e/: Main.hs
hydra-lightning-router/test-e2e/Hydra/Lightning/: Helper.hs  ScenarioSpec.hs
nix/: coding-standards.nix  configuration.nix  demo.nix  files.nix  packages.nix  pkgs.nix
