cabal-version:      3.8
name:               hydra-lightning-router
version:            0.1.0.0
synopsis:           Short description of your package
description:        Please see the README at <url>
category:           <category>
author:             <author>
maintainer:         <email>
copyright:          <author> 2025
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: <url>

common lang
  build-depends:      base >=4.18 && <5
  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe -Wno-unsafe

  default-extensions:
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    PatternSynonyms
    TypeData
    ViewPatterns

library
  import:          lang
  exposed-modules:
    Hydra.HTLC.BuildTx
    Hydra.HTLC.Conversions
    Hydra.HTLC.Data
    Hydra.HTLC.Embed
    Hydra.HTLC.Upstream
    Hydra.Lightning.Scenario

  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-core
    , containers
    , convex-base
    , file-embed
    , hydra-cardano-api
    , hydra-cluster
    , hydra-invoices
    , hydra-node
    , hydra-test-utils
    , hydra-tx
    , lens
    , lens-aeson
    , plutus-ledger-api
    , plutus-tx
    , req
    , stm
    , template-haskell
    , text
    , time

executable hydra-lightning-router
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  hydra-lightning-router
  ghc-options:    -threaded -rtsopts

test-suite hydra-lightning-router-tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , flat
    , hydra-invoices
    , hydra-lightning-router
    , plutus-ledger-api
    , plutus-tx
    , tasty
    , tasty-hunit
    , time

  ghc-options:    -threaded -rtsopts
