cabal-version:      3.8
name:               hydra-lightning-router
version:            0.1.0.0
synopsis:           Short description of your package
description:        Please see the README at <url>
category:           <category>
author:             <author>
maintainer:         <email>
copyright:          <author> 2025
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: <url>

common lang
  build-depends:      base >=4.18 && <5
  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe -Wno-unsafe

  default-extensions:
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    PatternSynonyms
    TypeData
    ViewPatterns

library
  import:          lang
  exposed-modules:
    Hydra.HTLC.BuildTx
    Hydra.HTLC.Conversions
    Hydra.HTLC.Data
    Hydra.HTLC.Embed
    Hydra.HTLC.Upstream

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , convex-base
    , file-embed
    , hydra-invoices
    , lens
    , lens-aeson
    , plutus-ledger-api
    , plutus-tx
    , template-haskell
    , text
    , time

test-suite hydra-lightning-router-tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , bytestring
    , cardano-api
    , convex-base
    , convex-coin-selection
    , convex-mockchain
    , convex-wallet
    , flat
    , hydra-invoices
    , hydra-lightning-router
    , plutus-tx
    , tasty
    , tasty-hunit
    , time

  ghc-options:    -threaded -rtsopts

test-suite hydra-lightning-router-e2e
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test-e2e
  other-modules:
    Hydra.Lightning.ScenarioSpec
    Spec

  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , hspec
    , hydra-cardano-api
    , hydra-cluster
    , hydra-invoices
    , hydra-lightning-router
    , hydra-node
    , hydra-plutus
    , hydra-test-utils
    , hydra-tx
    , lens
    , lens-aeson
    , plutus-tx
    , QuickCheck
    , req
    , stm
    , time

  ghc-options:    -threaded -rtsopts
